--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjLbmhIJnJ5rSLgd7acl-pXSd6CQdgvMg&libraries=places"></script>
 </head>
 <body>
-    <a href="https://external-link.com" target="_blank">מעבר לקישור החיצוני</a>
+    <a href="https://logig.com:2053/Players/1603" target="_blank">מעבר לקישור החיצוני</a>
     <div id="navbar" class="navbar-collapse">
         <div class="flags">
             <a href='/Common/SetCulture?lang=he' class="he" title="עברית"></a>
