--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
                                     </div>
                                 <div class="userData ml-3">
-                                    <h2 class="d-block" style="font-size: 2.7rem; font-weight: bold; text-align:center; margin-top:10px;">רותם מוקדי</h2>
+                                    <h2 class="d-block" style="font-size: 2.7rem; font-weight: bold; text-align:center; margin-top:10px;">Rotem Mokady</h2>
                                 </div>
                             </div>
                         </div>
@@ -68,7 +68,7 @@
                                         <label style="font-weight:bold;">Year Of Birth:</label>
                                     </div>
                                     <div class="col-md-7 col-5">
-                                        2000
+                                        2003
                                     </div>
                                 </div>
                             <div class="row">
