--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjLbmhIJnJ5rSLgd7acl-pXSd6CQdgvMg&libraries=places"></script>
 </head>
 <body>
+    <div style="position: absolute; top: 10px; right: 10px;">
+      <img src="logo.png" alt="לוגו" style="height: 80px;">
+    </div>
+
     <div id="navbar" class="navbar-collapse">
         <div class="flags">
             <a href='/Common/SetCulture?lang=he' class="he" title="עברית"></a>
