--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <div style="position: absolute; top: 10px; right: 10px;">
-      <img src="logo.png" alt="לוגו" style="height: 80px;">
+      <img src="iaa.png" alt="לוגו" style="height: 80px;">
     </div>
 
     <div id="navbar" class="navbar-collapse">
